--- a/client/src/css/textinput.css
+++ b/client/src/css/textinput.css
@@ -42,11 +42,11 @@
 }
 
 .text-input-create-account-tel {
-    margin-bottom: 15px;
+    margin-bottom: 70px;
 }
 
 .text-input-create-account-password {
-    margin-bottom: 50px;
+    margin-bottom: 15px;
 }
 
 .text-input-create-account-name {
